--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,12 @@
   publish = "dist"
 
 [[redirects]]
+  from = "/api/*"
+  to = "https://azzam-toefl-mrd4cn7fa-reanmazes-projects.vercel.app/api/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
